fixed width bug, header creating horizontal scrolling

--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -23,6 +23,6 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  width: 100vw;
+  max-width: 100vw;
   background-color: var(--primaryColor);
 }
