--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -4,6 +4,7 @@
   align-items: center;
   flex-direction: column;
   margin-bottom: 2rem;
+  width: 100%;
 }
 
 nav,
@@ -15,7 +16,7 @@ aside {
 .tag-navigation {
   display: flex;
   justify-content: center;
-  width: 100vw;
+  width: 100%;
   padding: .2rem 0;
   gap: 1rem;
 }
